--- a/pom.xml
+++ b/pom.xml
@@ -264,7 +264,7 @@
         <profile>
             <id>0.17.0-3.5.1</id>
             <properties>
-                <framelessVersion>0.16.0-51-692475f-20240311T173531Z-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
                 <framelessRuntime>0.17.0-3.5.1</framelessRuntime>
                 <framelessCompatVersion></framelessCompatVersion>
             </properties>
@@ -301,7 +301,7 @@
         <zeroAllocHashingVersion>0.15</zeroAllocHashingVersion>
         <scalaCrossPluginVersion>0.3.0</scalaCrossPluginVersion>
         <mavenShadePluginVersion>3.2.1</mavenShadePluginVersion>
-        <shimRuntimeVersion>0.0.1-RC3-SNAPSHOT</shimRuntimeVersion>
+        <shimRuntimeVersion>0.0.1-RC3</shimRuntimeVersion>
         <naked-local-fs-version>0.1.0</naked-local-fs-version>
 
 
@@ -338,13 +338,13 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guavaVersion}</version>
-            <!-- has to be compile for testing locally --> <scope>provided</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scalaCompatVersion}</artifactId>
             <version>${sparkVersion}</version>
-            <!-- has to be compile for testing locally --><scope>provided</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
