--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,22 @@
                 <framelessCompatVersion></framelessCompatVersion>
             </properties>
         </profile>
+        <profile>
+            <id>0.17.0-3.4.2</id>
+            <properties>
+                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
+                <framelessRuntime>0.17.0-3.4.1</framelessRuntime>
+                <framelessCompatVersion>-spark34</framelessCompatVersion>
+            </properties>
+        </profile>
+        <profile>
+            <id>0.17.0-3.3.4</id>
+            <properties>
+                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
+                <framelessRuntime>0.17.0-3.3.2</framelessRuntime>
+                <framelessCompatVersion>-spark33</framelessCompatVersion>
+            </properties>
+        </profile>
     </profiles>
 
     <properties>
