--- a/pom.xml
+++ b/pom.xml
@@ -264,7 +264,7 @@
         <profile>
             <id>0.17.0-3.5.1</id>
             <properties>
-                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.16.0-56-b161067-SNAPSHOT</framelessVersion>
                 <framelessRuntime>0.17.0-3.5.1</framelessRuntime>
                 <framelessCompatVersion></framelessCompatVersion>
             </properties>
@@ -272,7 +272,7 @@
         <profile>
             <id>0.17.0-3.4.2</id>
             <properties>
-                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.16.0-56-b161067-SNAPSHOT</framelessVersion>
                 <framelessRuntime>0.17.0-3.4.2</framelessRuntime>
                 <framelessCompatVersion>-spark34</framelessCompatVersion>
             </properties>
@@ -280,7 +280,7 @@
         <profile>
             <id>0.17.0-3.3.4</id>
             <properties>
-                <framelessVersion>0.16.0-52-1008b85-20240312T184633Z-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.16.0-56-b161067-SNAPSHOT</framelessVersion>
                 <framelessRuntime>0.17.0-3.3.2</framelessRuntime>
                 <framelessCompatVersion>-spark33</framelessCompatVersion>
             </properties>
@@ -317,7 +317,7 @@
         <zeroAllocHashingVersion>0.15</zeroAllocHashingVersion>
         <scalaCrossPluginVersion>0.3.0</scalaCrossPluginVersion>
         <mavenShadePluginVersion>3.2.1</mavenShadePluginVersion>
-        <shimRuntimeVersion>0.0.1-RC3</shimRuntimeVersion>
+        <shimRuntimeVersion>0.0.1-RC4</shimRuntimeVersion>
         <naked-local-fs-version>0.1.0</naked-local-fs-version>
 
 
