--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.sparkutils</groupId>
     <artifactId>testless_${framelessRuntime}_${shimRuntime}_${sparkCompatVersion}_${scalaCompatVersion}</artifactId>
 
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-RC1</version>
     <name>Frameless Test Pack</name>
     <description>Packaged tests and shaded jar for deploying in Databricks, or similar to verify builds still run</description>
     <url>https://sparkutils.github.io/frameless/</url>
@@ -160,6 +160,7 @@
                 <jacksonVersion>2.13.5</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
                 <refinedVersion>0.9.28</refinedVersion>
+                <scalatestVersion>3.2.0</scalatestVersion>
             </properties>
         </profile>
         <profile>
@@ -293,7 +294,7 @@
         <profile>
             <id>sparkutils-0.17.0-3.5</id>
             <properties>
-                <framelessVersion>0.17.0-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.17.0-RC1</framelessVersion>
                 <framelessRuntime>sparkutils_0.17.0-3.5</framelessRuntime>
                 <framelessOrg>com.sparkutils</framelessOrg>
                 <framelessCompatVersion>_3.5</framelessCompatVersion>
@@ -303,7 +304,7 @@
         <profile>
             <id>sparkutils-0.17.0-3.4</id>
             <properties>
-                <framelessVersion>0.17.0-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.17.0-RC1</framelessVersion>
                 <framelessRuntime>sparkutils_0.17.0-3.4</framelessRuntime>
                 <framelessOrg>com.sparkutils</framelessOrg>
                 <framelessCompatVersion>_3.4</framelessCompatVersion>
@@ -313,7 +314,7 @@
         <profile>
             <id>sparkutils-0.17.0-3.3</id>
             <properties>
-                <framelessVersion>0.17.0-SNAPSHOT</framelessVersion>
+                <framelessVersion>0.17.0-RC1</framelessVersion>
                 <framelessRuntime>sparkutils_0.17.0-3.3</framelessRuntime>
                 <framelessOrg>com.sparkutils</framelessOrg>
                 <framelessCompatVersion>_3.3</framelessCompatVersion>
