--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.sparkutils</groupId>
     <artifactId>testless_${framelessRuntime}_${shimRuntime}_${sparkCompatVersion}_${scalaCompatVersion}</artifactId>
 
-    <version>0.0.1-RC1</version>
+    <version>0.0.1-RC2</version>
     <name>Frameless Test Pack</name>
     <description>Packaged tests and shaded jar for deploying in Databricks, or similar to verify builds still run</description>
     <url>https://sparkutils.github.io/frameless/</url>
@@ -183,6 +183,7 @@
                 <jacksonVersion>2.14.2</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
                 <refinedVersion>0.9.28</refinedVersion>
+                <scalatestVersion>3.2.0</scalatestVersion>
             </properties>
         </profile>
         <profile>
@@ -227,6 +228,7 @@
                 <jacksonVersion>2.15.2</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
                 <refinedVersion>0.9.28</refinedVersion>
+                <scalatestVersion>3.2.0</scalatestVersion>
             </properties>
         </profile>
         <profile>
@@ -238,6 +240,7 @@
                 <jacksonVersion>2.15.2</jacksonVersion> <!-- scalameter dependency is 2.9.10 so perf tests runs need to change it -->
                 <guavaVersion>15.0</guavaVersion> <!-- databricks runtime version -->
                 <refinedVersion>0.9.28</refinedVersion>
+                <scalatestVersion>3.2.0</scalatestVersion>
             </properties>
         </profile>
         <profile>
